--- a/backend/templates/api.html
+++ b/backend/templates/api.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Rest API</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rest API</title>
 </head>
+
 <body style="overflow-x: hidden; background-color: darkslategray; color: whitesmoke;">
-   <div style="display: flex; flex-direction: column; width: 100vw; align-items: center;">
-      <h1>api/ -> ULR list, that you're seeing right now</h1>
-      <br /> <br />
-      <h1>api/articles -> Article list</h1>
-      <h1>api/articles/category -> Article list of given category</h1>
-      <h1>api/images/articleID -> Image list of given article</h1>
-      <h1>articles/display/limit -> Images with limited info just to display them</h1>
-      <br /> <br />
-      <h1>api/login -> Yea, you guesed it</h1>
-      <h1>api/logout -> You won't believe this</h1>
-      <h1>api/login/article-form -> Allows for creating articles with images</h1>
-      <br /> <br />
-      <h1>api/classes -> List of groups</h1>
-      <h1>api/teachers-> List of teachers</h1>
-      <h1>api/plan -> List of excel files for plans</h1>
-      <h1>api/plan/teacher/teacher -> Plan for given teacher (2 letter code as key)</h1>
-      <h1>api/plan/group -> Plan for given group</h1>
-      
-      
-   </div>
+    <div style="display: flex; flex-direction: column; width: 100vw; align-items: center;">
+        <h1>api/ -> ULR list, that you're seeing right now</h1>
+        <br /> <br />
+        <h1>api/articles -> Article list</h1>
+        <h1>api/articles/category -> Article list of given category</h1>
+        <h1>api/images/articleID -> Image list of given article</h1>
+        <h1>articles/display/limit -> Images with limited info just to display them</h1>
+        <br /> <br />
+        <h1>api/login -> Yea, you guesed it</h1>
+        <h1>api/logout -> You won't believe this</h1>
+        <h1>api/login/article-form -> Allows for creating articles with images</h1>
+        <br /> <br />
+        <h1>api/classes -> List of groups</h1>
+        <h1>api/teachers-> List of teachers</h1>
+        <h1>api/plan -> List of excel files for plans</h1>
+        <h1>api/plan/teacher/teacher -> Plan for given teacher (2 letter code as key)</h1>
+        <h1>api/plan/group -> Plan for given group</h1>
+        <?php
+            echo "Hello World!";
+        ?>
+    </div>
 </body>
+
 </html>
