--- a/frontend/src/article-view/ArticleView.css
+++ b/frontend/src/article-view/ArticleView.css
@@ -49,16 +49,50 @@
 
 .article-images>button {
     position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     background-color: rgba(0, 0, 0, .5);
     border: none;
-    font-size: 4em;
-    width: 1.5em;
-    height: 1.5em;
+    font-size: 3em;
+    width: 2em;
+    height: 2em;
     border-radius: 50%;
 
     cursor: pointer;
     align-self: center;
+}
+
+.article-images>button i {
+    transition: text-shadow .1s;
+    transition: color .3s;
+    transition: transform .3s;
+}
+
+.article-images>button:active i {
+    text-shadow: 0 0 3px var(--highlight-color);
+}
+
+
+.article-images>button:focus i {
+    transform: scale(1.2);
+    color: var(--highlight-color) !important;
+}
+
+@keyframes button-click {
+    0% {
+        background-color: black;
+
+    }
+
+    50% {
+        background-color: var(--highlight-color);
+    }
+
+    100% {
+        background-color: black;
+    }
 }
 
 #btn-l {
@@ -118,6 +152,7 @@
 @media only screen and (max-width: 900px) {
     .single-article-view {
         padding: 1em;
+        width: 100%;
     }
 
     .article-images>button {
@@ -134,6 +169,7 @@
     #btn-l {
         left: 0;
     }
+
     #btn-r {
         right: 0;
     }
