--- a/frontend/src/nav/Nav.css
+++ b/frontend/src/nav/Nav.css
@@ -8,8 +8,7 @@ nav {
 }
 
 .navigation {
-    margin-top: 1vh;
-    padding: 10px;
+    padding: .5em;
     display: grid;
     grid-template-columns: .1fr repeat(4, 1fr) .1fr;
     grid-gap: 20px;
